--- a/WebFundamentals/CSS/Internet/style.css
+++ b/WebFundamentals/CSS/Internet/style.css
@@ -1,5 +1,6 @@
-.{
-	reset
+*{
+	margin:0;
+	padding:0;
 }
 body{
 	font-family: arial;
@@ -63,7 +64,7 @@ h1, h2{
 	width: 90%;
 }
 #contact img{
-	margin-top: 15px;
+	margin-top: 5px;
 }
 #dns{
 	display:inline-block;
@@ -79,6 +80,7 @@ h1, h2{
 #phone{
 	display: inline-block;
 	vertical-align: top;
+	margin-bottom: 10px;
 }
 #phone p{
 	font-size: 8px;
@@ -92,8 +94,6 @@ h3{
 #client{
 	display: inline-block;
 	margin-left: 40px;
-	position: relative;
-	bottom: 90px;
 }
 #client p, #client ul, #result p, #result ol, #content p{
 	font-size: 12px;
@@ -105,6 +105,8 @@ h3{
 	vertical-align: top;
 	background-image: url("ad_background.png");
 	margin-top: 20px;
+	padding-top: 25px;
+	padding-bottom: 25px;
 }
 #ad h3{
 	color:white;
@@ -125,8 +127,7 @@ h3{
 	display:inline-block;
 	vertical-align: bottom;
 	margin-left:195px;
-	position: relative;
-	bottom: 90px;
+	margin-bottom: 10px;
 }
 #bigthree{
 	border-top: 4px solid royalblue;
