Fixed ninjaGold's css.

--- a/Python/Django/ninjaGold/apps/ninjagold/templates/ninjagold/index.html
+++ b/Python/Django/ninjaGold/apps/ninjagold/templates/ninjagold/index.html
@@ -3,7 +3,7 @@
   <head>
   	<meta charset="UTF-8">
   	{% load staticfiles %}
-  	<style src = "{% static 'ninjagold/css/main.css' %}"></style>
+  	<link rel="stylesheet" type="text/css" href="{% static 'ninjagold/css/main.css' %}">
   </head>
   <body>
   	<div id = "mainwrapper">
